--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             <div>
             <p style="font-weight: 550; margin:5px;margin-left: 20px;display: inline-block;font-size: 13px;">Password</p>
             <p style="margin-left: 128px;display: inline-block;color: blue;margin-top: 0;margin-bottom: 0;font-size: 13px;">Forgot Password</p>
-            <input  class="input1" type="text" >
+            <input  class="input1" type="password" >
             <button class="button1" type="button">Sign in</button></div>
             <div style="width: 280px;font-size: 12px;font-family:Arial, Helvetica, sans-serif;margin-left: 20px;"><p >
         By continuing, you agree to Amazon's <span style="color:rgb(60, 60, 225)"> Conditions of Use </span> and <span style="color:rgb(60, 60, 225)"> Privacy Notices</span></p>
